@@ -28,10 +28,10 @@ Collate:
     'osm-descriptors.R'
     'source.R'
     'osmar-plotting.R'
+    'as-osmar.R'
     'as-igraph.R'
     'as-osm.R'
     'as-osmar-elements.R'
-    'as-osmar.R'
     'as-sp.R'
     'get.R'
     'osmar-subsetting.R'
