@@ -43,6 +43,17 @@
 
   }
 }
+\examples{
+\dontrun{
+    api <- osmsource_api()
+
+    box <- corner_bbox(11.579341, 48.15102, 11.582852, 48.1530)
+    gschw <- get_osm(box, source = api)
+
+    kaufstr <- get_osm(way(3810479))
+    kaufstr_full <- get_osm(way(3810479), full = TRUE)
+  }
+}
 \references{
   \url{http://wiki.openstreetmap.org/wiki/API_v0.6}
 }
